Fix: remove 480px breakpoint overrides that shrunk logo/header on small phones

--- a/css/style.css
+++ b/css/style.css
@@ -1454,15 +1454,6 @@ p {
     font-size: 1.3rem;
   }
 
-  .navbar__logo-img {
-    width: 38px;
-    height: 38px;
-  }
-
-  .navbar__logo {
-    font-size: 0.85rem;
-  }
-
   .pack-card__actions {
     flex-direction: column;
     align-items: flex-start;
